# ticket-tracker

./: .gitignore  .markdownlint-cli2.jsonc  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  Makefile  README.md
docs/project/backlog/: template.md  tooling.md
src/: backlog.rs  commands.rs  lib.rs  main.rs  session.rs  store.rs
