[package]
name = "ticket-tracker"
version = "0.1.0"
edition = "2021"
description = "Generic ticket-driven development lifecycle CLI for backlog governance"
repository = "https://github.com/ottogiron/ticket-tracker"
license = "MIT"

[[bin]]
name = "ticket"
path = "src/main.rs"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
clap = { version = "4", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "2"
regex = "1"
glob = "0.3"
serde_json = "1.0"

[dev-dependencies]
tempfile = "3"
